Ajuste boton Cancelar

--- a/frontend/src/app/features/comerciantes/pages/crear-comerciante/crear-comerciante.component.html
+++ b/frontend/src/app/features/comerciantes/pages/crear-comerciante/crear-comerciante.component.html
@@ -68,7 +68,7 @@
       <button type="submit" [disabled]="form.invalid" class="btn btn-primary">
         {{ modoEdicion ? 'Actualizar' : 'Crear' }}
       </button>
-      <button type="button" class="btn btn-secondary" routerLink="/home">Cancelar</button>
+      <button type="button" class="btn btn-secondary" (click)="cancelar()">Cancelar</button>
     </div>
 
   </form>
